// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component in training status matches the previous snapshot 1`] = `
.css-1kg5b3n,
[data-css-1kg5b3n] {
  outline: none;
  height: 40px;
  text-align: center;
  letter-spacing: 1px;
  text-shadow: none;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  min-height: 1em;
  display: inline-block;
  background-color: transparent;
  font-size: 20px;
  color: #46B4E3;
}

.css-1dkzhsg,
[data-css-1dkzhsg] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  -webkit-flex-direction: row;
  -webkit-justify-content: center;
}

.css-1cqgl9p,
[data-css-1cqgl9p] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

<Footer
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={true}
>
  <Layout
    blocked={false}
    currentResults={
      Array [
        true,
        true,
        true,
        true,
        true,
      ]
    }
    fireCompleteExercise={[Function]}
    fireStartWorkout={[Function]}
    hidden={false}
    loadDefaults={[Function]}
    nextExercise={
      Object {
        "exerciseKey": "thisIsTheUniqueKey",
      }
    }
    onSetDone={[Function]}
    onSetFailed={[Function]}
    shouldEndExercise={false}
    training={true}
  >
    <footer
      data-css-1dkzhsg=""
    >
      <glamorous(div)>
        <div
          className="css-1cqgl9p"
        >
          <_FooterControlsHolder
            blocked={false}
            currentResults={
              Array [
                true,
                true,
                true,
                true,
                true,
              ]
            }
            fireCompleteExercise={[Function]}
            fireStartWorkout={[Function]}
            hidden={false}
            loadDefaults={[Function]}
            nextExercise={
              Object {
                "exerciseKey": "thisIsTheUniqueKey",
              }
            }
            onSetDone={[Function]}
            onSetFailed={[Function]}
            shouldEndExercise={false}
            training={true}
          >
            <FooterWorkoutControls
              blocked={false}
              currentResults={
                Array [
                  true,
                  true,
                  true,
                  true,
                  true,
                ]
              }
              fireCompleteExercise={[Function]}
              fireStartWorkout={[Function]}
              hidden={false}
              loadDefaults={[Function]}
              nextExercise={
                Object {
                  "exerciseKey": "thisIsTheUniqueKey",
                }
              }
              onSetDone={[Function]}
              onSetFailed={[Function]}
              shouldEndExercise={false}
              training={true}
            >
              <div>
                <FooterButton
                  clickHandler={[Function]}
                  data-test="failButton"
                  disabled={false}
                >
                  <button
                    data-css-1kg5b3n=""
                    disabled={false}
                    onClick={[Function]}
                  >
                    Failed
                  </button>
                </FooterButton>
                <FooterButton
                  clickHandler={[Function]}
                  data-test="doneButton"
                  disabled={false}
                >
                  <button
                    data-css-1kg5b3n=""
                    disabled={false}
                    onClick={[Function]}
                  >
                    Done
                  </button>
                </FooterButton>
              </div>
            </FooterWorkoutControls>
          </_FooterControlsHolder>
        </div>
      </glamorous(div)>
    </footer>
  </Layout>
</Footer>
`;

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
.css-1kg5b3n,
[data-css-1kg5b3n] {
  outline: none;
  height: 40px;
  text-align: center;
  letter-spacing: 1px;
  text-shadow: none;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  min-height: 1em;
  display: inline-block;
  background-color: transparent;
  font-size: 20px;
  color: #46B4E3;
}

.css-1dkzhsg,
[data-css-1dkzhsg] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  -webkit-flex-direction: row;
  -webkit-justify-content: center;
}

.css-1cqgl9p,
[data-css-1cqgl9p] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

<Footer
  blocked={true}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <Layout
    blocked={true}
    currentResults={
      Array [
        true,
        true,
        true,
        true,
        true,
      ]
    }
    fireCompleteExercise={[Function]}
    fireStartWorkout={[Function]}
    hidden={false}
    loadDefaults={[Function]}
    nextExercise={
      Object {
        "exerciseKey": "thisIsTheUniqueKey",
      }
    }
    onSetDone={[Function]}
    onSetFailed={[Function]}
    shouldEndExercise={false}
    training={false}
  >
    <footer
      data-css-1dkzhsg=""
    >
      <glamorous(div)>
        <div
          className="css-1cqgl9p"
        >
          <_FooterControlsHolder
            blocked={true}
            currentResults={
              Array [
                true,
                true,
                true,
                true,
                true,
              ]
            }
            fireCompleteExercise={[Function]}
            fireStartWorkout={[Function]}
            hidden={false}
            loadDefaults={[Function]}
            nextExercise={
              Object {
                "exerciseKey": "thisIsTheUniqueKey",
              }
            }
            onSetDone={[Function]}
            onSetFailed={[Function]}
            shouldEndExercise={false}
            training={false}
          >
            <withHandlers(_FooterWorkoutStart)
              blocked={true}
              currentResults={
                Array [
                  true,
                  true,
                  true,
                  true,
                  true,
                ]
              }
              fireCompleteExercise={[Function]}
              fireStartWorkout={[Function]}
              hidden={false}
              loadDefaults={[Function]}
              nextExercise={
                Object {
                  "exerciseKey": "thisIsTheUniqueKey",
                }
              }
              onSetDone={[Function]}
              onSetFailed={[Function]}
              shouldEndExercise={false}
              training={false}
            >
              <_FooterWorkoutStart
                blocked={true}
                currentResults={
                  Array [
                    true,
                    true,
                    true,
                    true,
                    true,
                  ]
                }
                fireCompleteExercise={[Function]}
                fireStartWorkout={[Function]}
                hidden={false}
                loadDefaults={[Function]}
                nextExercise={
                  Object {
                    "exerciseKey": "thisIsTheUniqueKey",
                  }
                }
                onSetDone={[Function]}
                onSetFailed={[Function]}
                shouldEndExercise={false}
                startButtonHandler={[Function]}
                training={false}
              >
                <div>
                  <FooterButton
                    clickHandler={[Function]}
                    disabled={true}
                  >
                    <button
                      data-css-1kg5b3n=""
                      disabled={true}
                      onClick={[Function]}
                    >
                      Starting ...
                    </button>
                  </FooterButton>
                </div>
              </_FooterWorkoutStart>
            </withHandlers(_FooterWorkoutStart)>
          </_FooterControlsHolder>
        </div>
      </glamorous(div)>
    </footer>
  </Layout>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the mounted snapshot 1`] = `
.css-1kg5b3n,
[data-css-1kg5b3n] {
  outline: none;
  height: 40px;
  text-align: center;
  letter-spacing: 1px;
  text-shadow: none;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  min-height: 1em;
  display: inline-block;
  background-color: transparent;
  font-size: 20px;
  color: #46B4E3;
}

.css-1dkzhsg,
[data-css-1dkzhsg] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  -webkit-flex-direction: row;
  -webkit-justify-content: center;
}

.css-1cqgl9p,
[data-css-1cqgl9p] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

<Footer
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <Layout
    blocked={false}
    currentResults={
      Array [
        true,
        true,
        true,
        true,
        true,
      ]
    }
    fireCompleteExercise={[Function]}
    fireStartWorkout={[Function]}
    hidden={false}
    loadDefaults={[Function]}
    nextExercise={
      Object {
        "exerciseKey": "thisIsTheUniqueKey",
      }
    }
    onSetDone={[Function]}
    onSetFailed={[Function]}
    shouldEndExercise={false}
    training={false}
  >
    <footer
      data-css-1dkzhsg=""
    >
      <glamorous(div)>
        <div
          className="css-1cqgl9p"
        >
          <_FooterControlsHolder
            blocked={false}
            currentResults={
              Array [
                true,
                true,
                true,
                true,
                true,
              ]
            }
            fireCompleteExercise={[Function]}
            fireStartWorkout={[Function]}
            hidden={false}
            loadDefaults={[Function]}
            nextExercise={
              Object {
                "exerciseKey": "thisIsTheUniqueKey",
              }
            }
            onSetDone={[Function]}
            onSetFailed={[Function]}
            shouldEndExercise={false}
            training={false}
          >
            <withHandlers(_FooterWorkoutStart)
              blocked={false}
              currentResults={
                Array [
                  true,
                  true,
                  true,
                  true,
                  true,
                ]
              }
              fireCompleteExercise={[Function]}
              fireStartWorkout={[Function]}
              hidden={false}
              loadDefaults={[Function]}
              nextExercise={
                Object {
                  "exerciseKey": "thisIsTheUniqueKey",
                }
              }
              onSetDone={[Function]}
              onSetFailed={[Function]}
              shouldEndExercise={false}
              training={false}
            >
              <_FooterWorkoutStart
                blocked={false}
                currentResults={
                  Array [
                    true,
                    true,
                    true,
                    true,
                    true,
                  ]
                }
                fireCompleteExercise={[Function]}
                fireStartWorkout={[Function]}
                hidden={false}
                loadDefaults={[Function]}
                nextExercise={
                  Object {
                    "exerciseKey": "thisIsTheUniqueKey",
                  }
                }
                onSetDone={[Function]}
                onSetFailed={[Function]}
                shouldEndExercise={false}
                startButtonHandler={[Function]}
                training={false}
              >
                <div>
                  <FooterButton
                    clickHandler={[Function]}
                    disabled={false}
                  >
                    <button
                      data-css-1kg5b3n=""
                      disabled={false}
                      onClick={[Function]}
                    >
                      Start Workout
                    </button>
                  </FooterButton>
                </div>
              </_FooterWorkoutStart>
            </withHandlers(_FooterWorkoutStart)>
          </_FooterControlsHolder>
        </div>
      </glamorous(div)>
    </footer>
  </Layout>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the rendered snapshot 1`] = `
.css-1kg5b3n,
[data-css-1kg5b3n] {
  outline: none;
  height: 40px;
  text-align: center;
  letter-spacing: 1px;
  text-shadow: none;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  min-height: 1em;
  display: inline-block;
  background-color: transparent;
  font-size: 20px;
  color: #46B4E3;
}

.css-1dkzhsg,
[data-css-1dkzhsg] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  -webkit-flex-direction: row;
  -webkit-justify-content: center;
}

.css-1cqgl9p,
[data-css-1cqgl9p] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

<footer
  data-css-1dkzhsg=""
>
  <div
    class="css-1cqgl9p"
  >
    <div>
      <button
        data-css-1kg5b3n=""
      >
        Start Workout
      </button>
    </div>
  </div>
</footer>
`;
